--- a/src/app/components/construction/construction.component.html
+++ b/src/app/components/construction/construction.component.html
@@ -1,7 +1,8 @@
 <div class="container">
   <div class="banner">
     <div class="card">
-      <div class="title">Coming Soon!</div>
+      <div class="title">Book of 2k</div>
+      <div class="subtitle">launching this fall</div>
       <div class="fluid-grid">
         <img src="assets/svg/bball.svg">
         <img src="assets/svg/games.svg">
