--- a/src/app/shared/navigation/navigation.component.html
+++ b/src/app/shared/navigation/navigation.component.html
@@ -1,8 +1,13 @@
-<mat-toolbar>
-    <button mat-icon-button aria-label="Menu">
-      <mat-icon>menu</mat-icon>
-    </button>
-    <span>Book of 2k</span>
-    <span class="example-spacer"></span>
-  </mat-toolbar>
-  
+<mat-toolbar class="navbar" [color]="themeColor">
+  <a mat-button routerLink="">
+    <img src="assets/svg/bball.svg">
+  </a>
+  <div class="links">
+    <!-- <a mat-button routerLink="">
+      Home
+    </a>
+    <a mat-button [routerLink]="['/about']">
+      About
+    </a> -->
+  </div>
+</mat-toolbar>
