--- a/src/assets/styles/variables.scss
+++ b/src/assets/styles/variables.scss
@@ -1,6 +1,3 @@
-$primary: #e84a5f;
-$secondary: #fecea8;
-$accent: #ff847c;
-$alternate: #99b898;
-$black: #2a363b;
-$gray: #adb5bd;
+$primary: #dd4b41;
+$secondary: #2a363b;
+$accent: #ffd884;
