--- a/src/app/components/construction/construction.component.html
+++ b/src/app/components/construction/construction.component.html
@@ -4,9 +4,9 @@
       <div class="title">Book of 2k</div>
       <div class="subtitle">launching this fall</div>
       <div class="fluid-grid">
-        <img src="assets/svg/bball.svg">
-        <img src="assets/svg/games.svg">
-        <img src="assets/svg/score.svg">
+        <img src="/assets/svg/bball.svg">
+        <img src="/assets/svg/games.svg">
+        <img src="/assets/svg/score.svg">
       </div>
     </div>
   </div>
